--- a/src/app/pages/apps/products/products.component.html
+++ b/src/app/pages/apps/products/products.component.html
@@ -53,7 +53,7 @@
                 <input matInput placeholder="BARCODE" [(ngModel)]="ADDED_PRODUCT.barcode" readonly=""/>
                 <div class="d-flex align-items-center">
                   <mat-icon matPrefix class="generate_code_button" (click)="GENERATE_BARCODE()">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M204-318q-22-38-33-78t-11-82q0-134 93-228t227-94h7l-64-64 56-56 160 160-160 160-56-56 64-64h-7q-100 0-170 70.5T240-478q0 26 6 51t18 49l-60 60ZM481-40 321-200l160-160 56 56-64 64h7q100 0 170-70.5T720-482q0-26-6-51t-18-49l60-60q22 38 33 78t11 82q0 134-93 228t-227 94h-7l64 64-56 56Z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#045b33"><path d="M204-318q-22-38-33-78t-11-82q0-134 93-228t227-94h7l-64-64 56-56 160 160-160 160-56-56 64-64h-7q-100 0-170 70.5T240-478q0 26 6 51t18 49l-60 60ZM481-40 321-200l160-160 56 56-64 64h7q100 0 170-70.5T720-482q0-26-6-51t-18-49l60-60q22 38 33 78t11 82q0 134-93 228t-227 94h-7l64 64-56 56Z"/></svg>
                   </mat-icon>
                 </div>
               </div>
@@ -88,7 +88,7 @@
             </div>
             <mat-form-field appearance="outline" class="w-100">
               <input matInput placeholder="Search Categories..." aria-label="Product" [matAutocomplete]="auto"
-                [(ngModel)]="ADDED_PRODUCT.category.CategoryName">
+                [(ngModel)]="ADDED_PRODUCT.category">
               <mat-icon matPrefix class="op-5">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon-20 d-flex" height="24px" viewBox="0 -960 960 960"
                   width="24px" fill="#5f6368">
@@ -228,50 +228,32 @@
 
           <ng-container matColumnDef="{{ column }}">
 
-            @if(column == 'cost' || column == 'sale'){
-            <th mat-header-cell *matHeaderCellDef class="icon_th" (click)="SORT_COST()">
-              {{ column | titlecase }}
-              <!-- @if(column == 'cost'){ -->
-              <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"
-                fill="#000000">
-                <path
-                  d="M324-432v-294L219-621l-51-51 192-192 192 192-51 51-105-105v294h-72ZM600-96 408-288l51-51 105 105v-294h72v294l105-105 51 51L600-96Z" />
-              </svg>
-              <!-- } -->
-            </th>
-            }
+@if(column == 'cost' || column == 'sale'){
+<th mat-header-cell *matHeaderCellDef class="icon_th" (click)="SORT_COST()">
+{{ column | titlecase }}
+<svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#000000"><path d="M324-432v-294L219-621l-51-51 192-192 192 192-51 51-105-105v294h-72ZM600-96 408-288l51-51 105 105v-294h72v294l105-105 51 51L600-96Z" /></svg>
+</th>
+}
 
-            @else{
-            <th mat-header-cell *matHeaderCellDef>
-              {{ column | titlecase }}
-              @if(column == 'cost'){
-              <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"
-                fill="#000000">
-                <path
-                  d="M324-432v-294L219-621l-51-51 192-192 192 192-51 51-105-105v294h-72ZM600-96 408-288l51-51 105 105v-294h72v294l105-105 51 51L600-96Z" />
-              </svg>
-              }
-            </th>
-            }
+@else{
+<th mat-header-cell *matHeaderCellDef>{{ TableHeaders[displayedColumns.indexOf(column)] }}</th>
+}
 
-            <td mat-cell *matCellDef="let element" (click)="expandRow($event, element, column)">
+<td mat-cell *matCellDef="let element" (click)="expandRow($event, element, column)">
 
               <!-- Check if the column is 'status' -->
               <ng-container *ngIf="column !== 'action'; else actionColumn">
                 <ng-container *ngIf="column !== 'barcode'; else barcodeColumn">
                   <ng-container *ngIf="column !== 'description'; else descriptionColumn">
-                    <ng-container *ngIf="column !== 'category'; else categoryColumn">
                       <ng-container *ngIf="column !== 'cost'; else costColumn">
                         {{ element[column] }}
                       </ng-container>
-                    </ng-container>
                   </ng-container>
                 </ng-container>
               </ng-container>
 
               <!-- Apply specific design if the column is 'status' -->
               <ng-template #barcodeColumn>{{ element[column] }}</ng-template>
-              <ng-template #categoryColumn>{{ (element[column]).CategoryName }}</ng-template>
               <ng-template #costColumn>$ {{ element[column] }}</ng-template>
               <ng-template #descriptionColumn>{{ TRUNCATE_TEXT(element[column], 20) }}</ng-template>
 
@@ -295,7 +277,7 @@
               <div class="details-container p-3 rounded border mb-3 mx-2">
                 <div class="detail-body mt-3">
                   <div class="col-md-4">
-                    <div class="detail-field"><strong>category:</strong> {{ element.category.categoryName }}</div>
+                    <div class="detail-field"><strong>category:</strong> {{ element.category }}</div>
                     <div class="detail-field"><strong>itemName:</strong> {{ element.itemName }}</div>
                     <div class="detail-field"><strong>description:</strong> {{ element.description }}</div>
                   </div>
