--- a/src/app/pages/apps/stock/adjustement/adjustement.component.html
+++ b/src/app/pages/apps/stock/adjustement/adjustement.component.html
@@ -24,17 +24,6 @@
             </mat-select>
           </mat-form-field>
         </div>
-<!--   
-        <div>
-          <mat-form-field class="theme-select" appearance="outline">
-            <mat-select [(ngModel)]="selectedCategory" (selectionChange)="FILTER_BY_CATEGORY($event.value)"
-              placeholder="All">
-              <mat-option [value]="'All'">All</mat-option>
-              <mat-option *ngFor="let category of categoryArray" [value]="category.CategoryName">{{ category.CategoryName
-                }}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div> -->
   
       </div>
   
@@ -50,27 +39,21 @@
           <ng-container *ngFor="let column of displayedColumns;">
   
             <ng-container matColumnDef="{{ column }}">
-  
+              <th mat-header-cell *matHeaderCellDef>{{ TableHeaders[displayedColumns.indexOf(column)] }}</th>
 
-              <th mat-header-cell *matHeaderCellDef>
-                {{ column | titlecase }}
-                @if(column == 'cost'){
-                <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"
-                  fill="#000000">
-                  <path
-                    d="M324-432v-294L219-621l-51-51 192-192 192 192-51 51-105-105v294h-72ZM600-96 408-288l51-51 105 105v-294h72v294l105-105 51 51L600-96Z" />
-                </svg>
-                }
-              </th>
               
-  
+
               <td mat-cell *matCellDef="let element" (click)="expandRow($event, element, column)">
   
                 <!-- Check if the column is 'status' -->
                 <ng-container *ngIf="column !== 'action'; else actionColumn">
-                          {{ element[column] }}
+                  <ng-container *ngIf="column !== 'adjustedItems'; else adjustedItems">
+                    {{ element[column] }}
+                  </ng-container>
                 </ng-container>
                 
+                <ng-template #adjustedItems>{{ TRUNCATE_TEXT(element[column], 20) }}</ng-template>
+
                 <ng-template #actionColumn>
                   <div class="action-link">
                     <!-- <a (click)="EDIT_STOCK(element)"><i-tabler name="edit" class="icon-18"></i-tabler></a> -->
